Routes connected, css loading into html files

--- a/Website/Templates/Model.html
+++ b/Website/Templates/Model.html
@@ -1,9 +1,12 @@
 <!DOCTYPE html>
 <html lang="en">
+<head>
 <title>Finger On The Pulse</title>
-<meta charset="UTF-8">
-<meta name="viewport" content="width=device-width, initial-scale=1">
-<link rel="stylesheet" href="styles.css">
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <link rel="stylesheet" type="text/css" href="styles.css">
+</head>
+
 <body>
 
 <!-- Header -->
