--- a/Website/Templates/Homepage.html
+++ b/Website/Templates/Homepage.html
@@ -1,9 +1,12 @@
 <!DOCTYPE html>
 <html lang="en">
-<title>Finger On The Pulse</title>
-<meta charset="UTF-8">
-<meta name="viewport" content="width=device-width, initial-scale=1">
-<link rel="stylesheet" href="styles.css">
+<head>
+  <title>Finger On The Pulse</title>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <link rel="stylesheet" type="text/css" href="static/css/styles.css">
+</head>
+
 <body>
 
 <!-- Header -->
@@ -69,7 +72,7 @@
   <div class="w3-light-grey w3-padding-large w3-padding-32 w3-margin-top" id="Information">
     <h3 class="w3-center">Place Holder For Style</h3>
     <hr>
-    <p>More STyle Stuff</p>
+    <p>More Style Stuff</p>
     <p>Powered by <a href="https://cdn.theatlantic.com/thumbor/LfyfTHNgco_iQq3tYU9YiG3tmF4=/359x322:3254x1950/720x405/https://cdn.theatlantic.com/assets/media/img/mt/2019/05/RTX1D61Q/original.jpg" target="_blank" class="w3-hover-text-green">THE GRADUATES!</a></p>
   </div>
 
