--- a/Website/Templates/Homepage.html
+++ b/Website/Templates/Homepage.html
@@ -42,28 +42,36 @@
     <hr>
     <p>Blah Blah Blah. Information and what not. Im thinking a general background here or something</p>
 
-    <form action="/action_page.php" target="_blank">
+    <form action="Results.html" target="_blank">
       <div class="w3-section">
-        <label>Question 1</label>
-        <input class="w3-input w3-border" type="text" required name="Name">
+        <label>Gender</label>
+        <input class="w3-input w3-border" type="text" required name="Gender" placeholder="Gender">
       </div>
       <div class="w3-section">
-        <label>Question 2</label>
-        <input class="w3-input w3-border" type="text" required name="Email">
+        <label>Age</label>
+        <input class="w3-input w3-border" type="text" required name="Age" placeholder="How Old Are You?">
       </div>
       <div class="w3-section">
-        <label>Question 3</label>
-        <input class="w3-input w3-border" required name="Message">
+        <label>Caffine (MG)</label>
+        <input class="w3-input w3-border" type="text" required name="Caffine" placeholder="Coffee Drinker?">
       </div>
       <div class="w3-section">
-        <label>Question 4</label>
-        <input class="w3-input w3-border" required name="Message">
+        <label>Systolic: Blood pressure mm Hg</label>
+        <input class="w3-input w3-border" type="text" required name="Systolic" placeholder="Blood Pressure?">
       </div>
       <div class="w3-section">
-        <label>Question 5</label>
-        <input class="w3-input w3-border" required name="Message">
+        <label>Direct HDL-Cholesterol (mg/dL)</label>
+        <input class="w3-input w3-border" type="text" required name="Cholesterol" placeholder="Cholesterol Levels">
       </div>
-      <button type="submit" class="w3-button w3-block w3-dark-grey">Submit</button>
+      <div class="w3-section">
+        <label>Avg Drinks per Day</label>
+        <input class="w3-input w3-border" type="text" required name="Drinks" placeholder="Drinker?">
+      </div>
+      <div class="w3-section">
+        <label>Smoker?</label>
+        <input class="w3-input w3-border" type="text" required name="Smoker" placeholder="Smoking Habits">
+      </div>
+      <button type="submit" value="Save" id="Save" class="w3-button w3-block w3-dark-grey">Submit</button>
     </form><br>
     
   </div>
