variable established to see query string

--- a/Website/Templates/Model.html
+++ b/Website/Templates/Model.html
@@ -4,14 +4,14 @@
 <title>Finger On The Pulse</title>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="stylesheet" type="text/css" href="styles.css">
+  <link rel="stylesheet" type="text/css" href="static/css/styles.css">
 </head>
 
 <body>
 
 <!-- Header -->
 <header class="w3-display-container w3-content w3-center" style="max-width:1500px">
-  <img class="w3-image" src="C:\Users\pburn\Documents\Python Scripts\Projects\Final Project\Final-Project\Website\Resources\Pulse2.jpg" alt="Me" width="800" height="50">
+  <img class="w3-image" src="static/Images/Pulse2.jpg" alt="Me" width="800" height="50">
   <div class="w3-display-middle w3-padding-large w3-border w3-wide w3-text-light-grey w3-center">
     <h1 class="w3-hide-medium w3-hide-small w3-xxxlarge">Oh Shit</h1>
     <h3 class="w3-hide-medium w3-hide-small">How Are You Doing?</h3>
