--- a/Website/Templates/Results.html
+++ b/Website/Templates/Results.html
@@ -3,12 +3,12 @@
 <title>Finger On The Pulse</title>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
-<link rel="stylesheet" href="styles.css">
+<link rel="stylesheet" href="static/css/styles.css">
 <body>
 
 <!-- Header -->
 <header class="w3-display-container w3-content w3-center" style="max-width:1500px">
-  <img class="w3-image" src="Resources\Pulse2.jpg" alt="Me" width="800" height="50">
+  <img class="w3-image" src="static/Images/Pulse2.jpg" alt="Me" width="800" height="50">
   <div class="w3-display-middle w3-padding-large w3-border w3-wide w3-text-light-grey w3-center">
     <h1 class="w3-hide-medium w3-hide-small w3-xxxlarge">Finger On The Pulse</h1>
     <h3 class="w3-hide-medium w3-hide-small">How Are You Doing?</h3>
@@ -43,6 +43,8 @@
 
 <!-- End page content -->
 </div>
+
+<script type="text/javascript" src="static/js/test.js"></script>
 
 </body>
 </html>
