--- a/Website/Templates/Homepage.html
+++ b/Website/Templates/Homepage.html
@@ -45,46 +45,36 @@
   <form action="Results.html">
     <div class="w3-section">
       <label>Gender</label>
-      <input class="w3-input w3-border" type="text" required name="Gender" placeholder="Gender" id="gender">
+      <input class="w3-input w3-border" type="number" required name="Gender" placeholder="Gender" id="gender">
     </div>
     <div class="w3-section">
       <label>Age</label>
-      <input class="w3-input w3-border" type="text" required name="Age" placeholder="How Old Are You?" id="age">
+      <input class="w3-input w3-border" type="number" required name="Age" placeholder="How Old Are You?" id="age">
     </div>
     <div class="w3-section">
       <label>Caffine (MG)</label>
-      <input class="w3-input w3-border" type="text" required name="Caffine" placeholder="Coffee Drinker?" id="caffine">
+      <input class="w3-input w3-border" type="number" required name="Caffine" placeholder="Coffee Drinker?" id="caffine">
     </div>
     <div class="w3-section">
       <label>Systolic: Blood pressure mm Hg</label>
-      <input class="w3-input w3-border" type="text" required name="Systolic" placeholder="Blood Pressure?" id="blood">
+      <input class="w3-input w3-border" type="number" required name="Systolic" placeholder="Blood Pressure?" id="blood">
     </div>
     <div class="w3-section">
       <label>Direct HDL-Cholesterol (mg/dL)</label>
-      <input class="w3-input w3-border" type="text" required name="Cholesterol" placeholder="Cholesterol Levels" id="chol">
+      <input class="w3-input w3-border" type="number" required name="Cholesterol" placeholder="Cholesterol Levels" id="chol">
     </div>
     <div class="w3-section">
       <label>Avg Drinks per Day</label>
-      <input class="w3-input w3-border" type="text" required name="Drinks" placeholder="Drinker?" id="drink">
+      <input class="w3-input w3-border" type="number" required name="Drinks" placeholder="Drinker?" id="drink">
     </div>
     <div class="w3-section">
       <label>Smoker?</label>
-      <input class="w3-input w3-border" type="text" required name="Smoker" placeholder="Smoking Habits" id="smoke">
+      <input class="w3-input w3-border" type="number" required name="Smoker" placeholder="Smoking Habits" id="smoke">
     </div>
     <button onclick="store()" type="submit" value="Save" id="Save" class="w3-button w3-block w3-dark-grey">Submit</button>
   </form><br>
 </div>
 
-<script  type="text/javascript">
-  function store(){
-     var gender= document.getElementById("gender");
-     localStorage.setItem("gender", gender.value);
-     var age= document.getElementById("age");
-     localStorage.setItem("age", age.value);
-     console.log(localStorage);
-    }
-  
-</script>
 
   <!--More Info Holder-->
   <div class="w3-light-grey w3-padding-large w3-padding-32 w3-margin-top" id="Information">
