--- a/Website/Templates/Homepage.html
+++ b/Website/Templates/Homepage.html
@@ -45,31 +45,39 @@
   <form action="Results.html">
     <div class="w3-section">
       <label>Gender</label>
-      <input class="w3-input w3-border" type="number" required name="Gender" placeholder="Gender" id="gender">
+      <input class="w3-input w3-border" type="number" required name="Male=0 Female=1" placeholder="Gender" id="gender">
     </div>
     <div class="w3-section">
       <label>Age</label>
       <input class="w3-input w3-border" type="number" required name="Age" placeholder="How Old Are You?" id="age">
     </div>
     <div class="w3-section">
+      <label>Height</label>
+      <input class="w3-input w3-border" type="number" required name="Height In CM" placeholder="How Old Are You?" id="age">
+    </div>
+    <div class="w3-section">
+      <label>Weight</label>
+      <input class="w3-input w3-border" type="number" required name="Weight In KG" placeholder="How Old Are You?" id="age">
+    </div>
+    <div class="w3-section">
       <label>Caffine (MG)</label>
-      <input class="w3-input w3-border" type="number" required name="Caffine" placeholder="Coffee Drinker?" id="caffine">
+      <input class="w3-input w3-border" type="number" required name="Caffine Intake In MG" placeholder="Coffee Drinker?" id="caffine">
     </div>
     <div class="w3-section">
       <label>Systolic: Blood pressure mm Hg</label>
-      <input class="w3-input w3-border" type="number" required name="Systolic" placeholder="Blood Pressure?" id="blood">
+      <input class="w3-input w3-border" type="number" required name="Systolic" placeholder="Normal is Below 120 mm Hg" id="blood">
     </div>
     <div class="w3-section">
       <label>Direct HDL-Cholesterol (mg/dL)</label>
-      <input class="w3-input w3-border" type="number" required name="Cholesterol" placeholder="Cholesterol Levels" id="chol">
+      <input class="w3-input w3-border" type="number" required name="Cholesterol" placeholder="Normal Is Above 60 mg/dL" id="chol">
     </div>
     <div class="w3-section">
       <label>Avg Drinks per Day</label>
-      <input class="w3-input w3-border" type="number" required name="Drinks" placeholder="Drinker?" id="drink">
+      <input class="w3-input w3-border" type="number" required name="Drinks" placeholder="How Many Drinks Do You Have In A Single Session" id="drink">
     </div>
     <div class="w3-section">
       <label>Smoker?</label>
-      <input class="w3-input w3-border" type="number" required name="Smoker" placeholder="Smoking Habits" id="smoke">
+      <input class="w3-input w3-border" type="number" required name="Smoker" placeholder="No=0 Yes=1" id="smoke">
     </div>
     <button onclick="store()" type="submit" value="Save" id="Save" class="w3-button w3-block w3-dark-grey">Submit</button>
   </form><br>
