Updated html and js variable references to flow through form submissions

--- a/Website/Templates/Homepage.html
+++ b/Website/Templates/Homepage.html
@@ -45,7 +45,7 @@
   <form action="Results.html">
     <div class="w3-section">
       <label>Gender</label>
-      <input class="w3-input w3-border" type="number" required name="Male=0 Female=1" placeholder="Gender" id="gender">
+      <input class="w3-input w3-border" type="number" required name="Gender" placeholder="Male=0 Female=1" id="gender">
     </div>
     <div class="w3-section">
       <label>Age</label>
@@ -53,15 +53,15 @@
     </div>
     <div class="w3-section">
       <label>Height</label>
-      <input class="w3-input w3-border" type="number" required name="Height In CM" placeholder="How Old Are You?" id="age">
+      <input class="w3-input w3-border" type="number" required name="Height" placeholder="Height In CM" id="heihgt">
     </div>
     <div class="w3-section">
       <label>Weight</label>
-      <input class="w3-input w3-border" type="number" required name="Weight In KG" placeholder="How Old Are You?" id="age">
+      <input class="w3-input w3-border" type="number" required name="Weight" placeholder="Weight In KG" id="weight">
     </div>
     <div class="w3-section">
-      <label>Caffine (MG)</label>
-      <input class="w3-input w3-border" type="number" required name="Caffine Intake In MG" placeholder="Coffee Drinker?" id="caffine">
+      <label>Caffeine (MG)</label>
+      <input class="w3-input w3-border" type="number" required name="Caffeine (MG)" placeholder="caffeine Intake In MG" id="caffeine">
     </div>
     <div class="w3-section">
       <label>Systolic: Blood pressure mm Hg</label>
