--- a/Website/Templates/Results.html
+++ b/Website/Templates/Results.html
@@ -38,8 +38,10 @@
     <h3 class="w3-center">Your Results</h3>
     <hr>
     <p>Entered gender: <span id="genderInput"></span></p><br>
+    <p>Entered height: <span id="heightInput"></span></p><br>
+    <p>Entered weight: <span id="weightInput"></span></p><br>
     <p>Entered age: <span id="ageInput"></span></p><br>
-    <p>Entered caffine: <span id="caffineInput"></span></p><br>
+    <p>Entered caffeine: <span id="caffeineInput"></span></p><br>
     <p>Entered systolic: <span id="systolicInput"></span></p><br>
     <p>Entered cholesterol: <span id="cholesterolInput"></span></p><br>
     <p>Entered drinks: <span id="drinksInput"></span></p><br>
@@ -50,6 +52,7 @@
 <!-- End page content -->
 </div>
 
+<script src="http://d3js.org/d3.v3.min.js" charset="utf-8"></script>
 <script type="text/javascript" src="static/js/test.js"></script>
 
 </body>
