Fiddling around with GET & POST data

--- a/Website/Templates/Homepage.html
+++ b/Website/Templates/Homepage.html
@@ -42,7 +42,7 @@
   <hr>
   <p>Blah Blah Blah. Information and what not. Im thinking a general background here or something</p>
 
-  <form action="Results.html">
+  <form action="Results.html" method="GET">
     <div class="w3-section">
       <label>Gender</label>
       <input class="w3-input w3-border" type="number" required name="Gender" placeholder="Male=0 Female=1" id="gender">
