Reading user fed data into the flask app

--- a/Website/Templates/Results.html
+++ b/Website/Templates/Results.html
@@ -46,6 +46,7 @@
     <p>Entered cholesterol: <span id="cholesterolInput"></span></p><br>
     <p>Entered drinks: <span id="drinksInput"></span></p><br>
     <p>Entered smoker: <span id="smokerInput"></span></p><br>
+    <p>{{ prediction_text }}</p>
     
   </div>
 
@@ -53,6 +54,7 @@
 </div>
 
 <script src="http://d3js.org/d3.v3.min.js" charset="utf-8"></script>
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
 <script type="text/javascript" src="static/js/test.js"></script>
 
 </body>
