--- a/Website/Templates/Homepage.html
+++ b/Website/Templates/Homepage.html
@@ -38,9 +38,10 @@
 
 <!-- User Input For Information Section -->
 <div class="w3-light-grey w3-padding-large w3-padding-32 w3-margin-top" id="Query">
-  <h3 class="w3-center">Your Information</h3>
+  <h2 class="w3-center w3-blue">Irregular Pulse Tool</h2>
   <hr>
-  <p>Blah Blah Blah. Information and what not. Im thinking a general background here or something</p>
+  <h3 class="w3-center">Utilize the tool below to help determine whether or not you could have an irregular pulse</h3>
+  <p class="w3-center">*Disclaimer: The tools of this site is to be used for reference only and is not medical advice!</p>
 
   <form action="Results.html" method="GET">
     <div class="w3-section">
@@ -86,9 +87,6 @@
 
   <!--More Info Holder-->
   <div class="w3-light-grey w3-padding-large w3-padding-32 w3-margin-top" id="Information">
-    <h3 class="w3-center">Place Holder For Style</h3>
-    <hr>
-    <p>More Style Stuff</p>
     <p>Powered by <a href="https://cdn.theatlantic.com/thumbor/LfyfTHNgco_iQq3tYU9YiG3tmF4=/359x322:3254x1950/720x405/https://cdn.theatlantic.com/assets/media/img/mt/2019/05/RTX1D61Q/original.jpg" target="_blank" class="w3-hover-text-green">THE GRADUATES!</a></p>
   </div>
 
