--- a/Website/Templates/Results.html
+++ b/Website/Templates/Results.html
@@ -10,8 +10,8 @@
 <header class="w3-display-container w3-content w3-center" style="max-width:1500px">
   <img class="w3-image" src="static/Images/Pulse2.jpg" alt="Me" width="800" height="50">
   <div class="w3-display-middle w3-padding-large w3-border w3-wide w3-text-light-grey w3-center">
-    <h1 class="w3-hide-medium w3-hide-small w3-xxxlarge">Finger On The Pulse</h1>
-    <h3 class="w3-hide-medium w3-hide-small">How Are You Doing?</h3>
+    <h1 class="w3-hide-medium w3-hide-small w3-xxxlarge">Your Results</h1>
+    <h3 class="w3-hide-medium w3-hide-small">Always Consult A Doctor</h3>
   </div>
   
  <!-- Navbar (placed at the bottom of the header image) Page Hrefs are local placeholders. Change to Relative once fully implemented -->
