--- a/Website/Templates/Results.html
+++ b/Website/Templates/Results.html
@@ -1,10 +1,30 @@
 <!DOCTYPE html>
-<html lang="en">
-<title>Finger On The Pulse</title>
-<meta charset="UTF-8">
-<meta name="viewport" content="width=device-width, initial-scale=1">
-<link rel="stylesheet" href="static/css/styles.css">
-<body onload="loaded()">
+<head>
+  <html lang="en">
+  <title>Finger On The Pulse</title>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  
+  <link rel="stylesheet" type="text/css" href="static/css/styles.css">
+  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" integrity="sha384-JcKb8q3iqJ61gNV9KGb8thSsNjpSL0n8PARn9HuZOnIxN0hoP+VmmDGMN5t9UJ0Z" crossorigin="anonymous">
+    
+    <script>
+      var prediction = '{{ prediction_text }}'
+      console.log(prediction)
+      
+       function result() {
+        if (prediction == '[1]') {
+          document.getElementById("result").innerHTML = "Uh oh, the model is predicting that you have an irregular heart beat. You may want to seee a doctor."
+          
+        } else {
+          document.getElementById("result").innerHTML= "Congratulations! The model is predicting that your heart-beat is normal."
+        }
+       }
+    </script>
+
+</head>
+
+<body onload="loaded(), onload=result()">
 
 <!-- Header -->
 <header class="w3-display-container w3-content w3-center" style="max-width:1500px">
@@ -30,32 +50,76 @@
   <a href="Model.html" class="w3-bar-item w3-button">Model Information</a>
 </div>
 </div>
-<!-- Page content -->
+
 <div class="w3-content w3-padding-large w3-margin-top" id="Tool">
+  <br>
+    <h2 class="w3-center w3-blue">Your Results:</h2>
+    <!--More Info Holder-->
+    <div class="w3-panel">
+      <div class="w3-row-padding" style="margin:0 200px">
+          <table class="w3-table w3-striped w3-white">
+            <tr>
+              <td><i class="fa fa-user w3-text-blue w3-large"></i></td>
+              <td>Gender:</td>
+              <td id="genderInput"></td></td>
+            </tr>
+            <tr>
+              <td><i class="fa fa-user w3-text-blue w3-large"></i></td>
+              <td>Age:</td>
+              <td id="ageInput"></td>
+            </tr>
+            <tr>
+              <td><i class="fa fa-user w3-text-blue w3-large"></i></td>
+              <td>Height (CM):</td>
+              <td id="heightInput"></td>
+            </tr>
+            <tr>
+              <td><i class="fa fa-bell w3-text-red w3-large"></i></td>
+              <td>Weight (KG):</td>
+              <td id="weightInput"></td>
+            </tr>
+            <tr>
+              <td><i class="fa fa-users w3-text-yellow w3-large"></i></td>
+              <td>Caffeine (MG) per day:</td>
+              <td id="caffeineInput"></td>
+            </tr>
+            <tr>
+              <td><i class="fa fa-comment w3-text-red w3-large"></i></td>
+              <td>Blood pressure levels:</td>
+              <td id="systolicInput"></td>
+            </tr>
+            <tr>
+              <td><i class="fa fa-bookmark w3-text-blue w3-large"></i></td>
+              <td>Cholesterol levels:</td>
+              <td id="cholesterolInput"></td>
+            </tr>
+            <tr>
+              <td><i class="fa fa-laptop w3-text-red w3-large"></i></td>
+              <td>Drinks per day:</td>
+              <td id="drinksInput"></td>
+            </tr>
+            <tr>
+              <td><i class="fa fa-share-alt w3-text-green w3-large"></i></td>
+              <td>User is smoker:</td>
+              <td id="smokerInput"></td>
+            </tr>
+          </table>
+        </div>
+      </div>
+      <div class="w3-light-grey w3-padding-large w3-padding-32 w3-margin-top w3-center" id="result">
+        <p>This is a test</p>
+      </div>
 
-  <!--More Info Holder-->
-  <div class="w3-light-grey w3-padding-large w3-padding-32 w3-margin-top" id="Information">
-    <h3 class="w3-center">Your Results</h3>
-    <hr>
-    <p>Entered gender: <span id="genderInput"></span></p><br>
-    <p>Entered height: <span id="heightInput"></span></p><br>
-    <p>Entered weight: <span id="weightInput"></span></p><br>
-    <p>Entered age: <span id="ageInput"></span></p><br>
-    <p>Entered caffeine: <span id="caffeineInput"></span></p><br>
-    <p>Entered systolic: <span id="systolicInput"></span></p><br>
-    <p>Entered cholesterol: <span id="cholesterolInput"></span></p><br>
-    <p>Entered drinks: <span id="drinksInput"></span></p><br>
-    <p>Entered smoker: <span id="smokerInput"></span></p><br>
-    <p>{{ prediction_text }}</p>
-    
-  </div>
-
-<!-- End page content -->
 </div>
 
+<!-- End page content -->
+
+
 <script src="http://d3js.org/d3.v3.min.js" charset="utf-8"></script>
-<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
 <script type="text/javascript" src="static/js/test.js"></script>
+<script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.6/umd/popper.min.js" integrity="sha384-wHAiFfRlMFy6i5SRaxvfOCifBUQy1xHdJ/yoi7FRNXMRBu5WHdZYu1hA6ZOblgut" crossorigin="anonymous"></script>
+<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.2.1/js/bootstrap.min.js" integrity="sha384-B0UglyR+jN6CkvvICOB2joaf5I4l3gm9GU6Hc1og6Ls7i6U/mkkaduKaBhlAXv9k" crossorigin="anonymous"></script>
 
 </body>
 </html>
