--- a/Website/Templates/Homepage.html
+++ b/Website/Templates/Homepage.html
@@ -21,7 +21,7 @@
  <div class="w3-bar w3-light-grey w3-round w3-display-bottommiddle w3-hide-small" style="bottom:-16px">
   <a href="Homepage.html#Tool" class="w3-bar-item w3-button">Tool</a>
   <a href="Homepage.html#Information" class="w3-bar-item w3-button">Information</a>
-  <a href="Model.html" class="w3-bar-item w3-button">Model Information</a>
+  <a href="https://github.com/Kinnaribadal/Final-Project/blob/main/Jupyter/machine_learning.ipynb" class="w3-bar-item w3-button">Model Information</a>
 </div>
 </header>
 
@@ -30,7 +30,7 @@
 <div class="w3-bar w3-light-grey">
   <a href="Homepage.html#Tool" class="w3-bar-item w3-button">Tool</a>
   <a href="Homepage.html#Information" class="w3-bar-item w3-button">Information</a>
-  <a href="Model.html" class="w3-bar-item w3-button">Model Information</a>
+  <a href="https://github.com/Kinnaribadal/Final-Project/blob/main/Jupyter/machine_learning.ipynb" class="w3-bar-item w3-button">Model Information</a>
 </div>
 </div>
 <!-- Page content -->
