--- a/Website/Templates/Results.html
+++ b/Website/Templates/Results.html
@@ -37,7 +37,7 @@
  <!-- Navbar (placed at the bottom of the header image) Page Hrefs are local placeholders. Change to Relative once fully implemented -->
  <div class="w3-bar w3-light-grey w3-round w3-display-bottommiddle w3-hide-small" style="bottom:-16px">
   <a href="Homepage.html#Tool" class="w3-bar-item w3-button">Tool</a>
-  <a href="Homepage.html#Information" class="w3-bar-item w3-button">Information</a>
+  <a href="https://public.tableau.com/profile/kinnari.patel7104#!/vizhome/PULSEREGULARORIRREGULAR/MAINPAGE" class="w3-bar-item w3-button">Tableau-Visualization</a>
   <a href="https://github.com/Kinnaribadal/Final-Project/blob/main/Jupyter/machine_learning.ipynb" class="w3-bar-item w3-button">Model Information</a>
 </div>
 </header>
@@ -46,7 +46,7 @@
 <div class="w3-center w3-light-grey w3-padding-16 w3-hide-large w3-hide-medium">
 <div class="w3-bar w3-light-grey">
   <a href="Homepage.html#Tool" class="w3-bar-item w3-button">Tool</a>
-  <a href="Homepage.html#Information" class="w3-bar-item w3-button">Information</a>
+  <a href="https://public.tableau.com/profile/kinnari.patel7104#!/vizhome/PULSEREGULARORIRREGULAR/MAINPAGE" class="w3-bar-item w3-button">Tableau-Visualization</a>
   <a href="https://github.com/Kinnaribadal/Final-Project/blob/main/Jupyter/machine_learning.ipynb" class="w3-bar-item w3-button">Model Information</a>
 </div>
 </div>
