--- a/Website/Templates/Results.html
+++ b/Website/Templates/Results.html
@@ -70,17 +70,17 @@
             </tr>
             <tr>
               <td><i class="fa fa-user w3-text-blue w3-large"></i></td>
-              <td>Height (CM):</td>
+              <td>Height:</td>
               <td id="heightInput"></td>
             </tr>
             <tr>
               <td><i class="fa fa-bell w3-text-red w3-large"></i></td>
-              <td>Weight (KG):</td>
+              <td>Weight:</td>
               <td id="weightInput"></td>
             </tr>
             <tr>
               <td><i class="fa fa-users w3-text-yellow w3-large"></i></td>
-              <td>Caffeine (MG) per day:</td>
+              <td>Caffeine per day:</td>
               <td id="caffeineInput"></td>
             </tr>
             <tr>
