Added in webpage links and fixed minor errors

--- a/Website/Templates/Model.html
+++ b/Website/Templates/Model.html
@@ -31,6 +31,7 @@
     <a href="Homepage.html#Tool" class="w3-bar-item w3-button">Tool</a>
     <a href="Homepage.html#Information" class="w3-bar-item w3-button">Information</a>
     <a href="Model.html" class="w3-bar-item w3-button">Model Information</a>
+    <a href="http://127.0.0.1:5000/multiple" class="w3-bar-item w3-button">D3 Visualizations</a>
   </div>
   </div>
 
@@ -39,6 +40,7 @@
     <a href="#Tool" class="w3-bar-item w3-button">Tool</a>
     <a href="#contact" class="w3-bar-item w3-button">Contact</a>
     <a href="C:\Users\pburn\Documents\Python Scripts\Projects\Final Project\Final-Project\Website\Model.html" class="w3-bar-item w3-button">Model Information</a>
+    <a href="http://127.0.0.1:5000/multiple" class="w3-bar-item w3-button">D3 Visualizations</a>
   </div>
 </header>
 
