--- a/Website/Templates/Homepage.html
+++ b/Website/Templates/Homepage.html
@@ -22,6 +22,7 @@
   <a href="Homepage.html" class="w3-bar-item w3-button">Tool</a>
   <a href="https://public.tableau.com/profile/kinnari.patel7104#!/vizhome/PULSEREGULARORIRREGULAR/MAINPAGE" class="w3-bar-item w3-button">Tableau-Visualization</a>
   <a href="https://github.com/Kinnaribadal/Final-Project/blob/main/Jupyter/machine_learning.ipynb" class="w3-bar-item w3-button">Model Information</a>
+  <a href="http://127.0.0.1:5000/multiple" class="w3-bar-item w3-button">D3 Visualizations</a>
 </div>
 </header>
 
@@ -31,6 +32,7 @@
   <a href="Homepage.html" class="w3-bar-item w3-button">Tool</a>
   <a href="https://public.tableau.com/profile/kinnari.patel7104#!/vizhome/PULSEREGULARORIRREGULAR/MAINPAGE" class="w3-bar-item w3-button">Tableau-Visualization</a>
   <a href="https://github.com/Kinnaribadal/Final-Project/blob/main/Jupyter/machine_learning.ipynb" class="w3-bar-item w3-button">Model Information</a>
+  <a href="http://127.0.0.1:5000/multiple" class="w3-bar-item w3-button">D3 Visualizations</a>
 </div>
 </div>
 <!-- Page content -->
